--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML Images</title>
+    <title>amazon</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a picture of a lion"/>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"  alt="amazonaws" title="amazon"/>
   </body>
 </html>
